<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/menu_home"
            android:enabled="true"
            android:title="@string/lbl_home"
            android:icon="@drawable/ic_home"
            app:showAsAction="always"/>
    <item
            android:id="@+id/menu_standing"
            android:enabled="true"
            android:title="@string/lbl_standings"
            android:icon="@drawable/ic_standings"
            app:showAsAction="always"/>
    <item
            android:id="@+id/menu_match"
            android:enabled="true"
            android:title="@string/botnav_match"
            android:icon="@drawable/ic_date"
            app:showAsAction="always"/>

    <item
            android:id="@+id/menu_teams"
            android:enabled="true"
            android:title="@string/lbl_teams"
            android:icon="@drawable/ic_teams"
            app:showAsAction="always"/>

    <item
            android:id="@+id/menu_favorites"
            android:enabled="true"
            android:icon="@drawable/ic_favorite"
            android:title="@string/botnav_favorite"
            app:showAsAction="always" />
</menu>